--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "@mapbox/vector-tile": "^1.3.1",
     "@pixiv/three-vrm": "^0.6.4",
+    "@tweenjs/tween.js": "^18.6.4",
     "@turf/buffer": "^6.5.0",
     "@xrengine/bot": "^0.3.31",
     "@xrengine/common": "^0.3.31",
