--- a/packages/client-core/package.json
+++ b/packages/client-core/package.json
@@ -67,6 +67,7 @@
     "immutable": "4.0.0-rc.14",
     "jwt-decode": "3.1.2",
     "lodash": "4.17.21",
+    "material-ui-audio-player": "^1.6.6",
     "material-ui-confirm": "2.1.3",
     "moment": "2.29.1",
     "nipplejs": "0.9.0",
