--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -51,6 +51,7 @@
     "dashjs": "^4.0.0-npm",
     "detect-browser": "^5.2.0",
     "draco3dgltf": "^1.4.1",
+    "earcut": "^2.2.3",
     "ethereal": "^2.0.4",
     "hls.js": "^1.0.7",
     "idb-keyval": "^5.0.5",
@@ -73,6 +74,7 @@
     "@rollup/plugin-node-resolve": "13.0.2",
     "@rollup/plugin-replace": "3.0.0",
     "@rollup/plugin-typescript": "8.2.3",
+    "@types/earcut": "^2.1.1",
     "@types/expect-puppeteer": "4.4.6",
     "@types/geojson": "^7946.0.8",
     "@types/jest": "26.0.24",
