--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -40,10 +40,11 @@
     "@typescript-eslint/parser": "^4.4.1"
   },
   "dependencies": {
+    "@mapbox/geojson-rewind": "^0.5.1",
     "@mapbox/vector-tile": "^1.3.1",
     "@pixiv/three-vrm": "^0.6.4",
-    "@tweenjs/tween.js": "^18.6.4",
     "@turf/buffer": "^6.5.0",
+    "@tweenjs/tween.js": "^18.6.4",
     "@xrengine/bot": "^0.3.31",
     "@xrengine/common": "^0.3.31",
     "browserfs": "^1.4.3",
