--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -40,8 +40,8 @@
   "dependencies": {
     "@mapbox/vector-tile": "^1.3.1",
     "@pixiv/three-vrm": "^0.6.4",
-    "@tweenjs/tween.js": "^18.6.4",
     "@turf/buffer": "^6.5.0",
+    "@tweenjs/tween.js": "^18.6.4",
     "@xrengine/bot": "^0.3.31",
     "@xrengine/common": "^0.3.31",
     "browserfs": "^1.4.3",
@@ -58,6 +58,7 @@
     "pbf": "^3.2.1",
     "postprocessing": "^6.21.5",
     "react": "17.0.2",
+    "simplex-noise": "^2.4.0",
     "socket.io": "4.1.3",
     "styled-components": "5.3.0",
     "three": "^0.130.0",
