--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -40,8 +40,8 @@
     "@typescript-eslint/parser": "^4.4.1"
   },
   "dependencies": {
-    "@mapbox/geojson-rewind": "^0.5.1",
     "@hookstate/core": "^3.0.8",
+    "@mapbox/geojson-rewind": "^0.5.1",
     "@mapbox/vector-tile": "^1.3.1",
     "@pixiv/three-vrm": "^0.6.4",
     "@turf/buffer": "^6.5.0",
@@ -85,6 +85,7 @@
     "@types/puppeteer": "5.4.4",
     "@types/three": "0.130.1",
     "@types/yuka": "0.7.1",
+    "cross-env": "^7.0.3",
     "esbuild": "0.12.16",
     "eslint": "7.31.0",
     "rollup": "2.54.0",
