--- a/packages/ops/package.json
+++ b/packages/ops/package.json
@@ -5,5 +5,8 @@
   "description": "Dev Ops tooling for XREngine",
   "repository": "http://github.com/XRFoundation/XREngine",
   "author": "XREngine",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "cross-env": "^7.0.3"
+  }
 }
