--- a/packages/engine/package.json
+++ b/packages/engine/package.json
@@ -63,6 +63,7 @@
     "pbf": "^3.2.1",
     "postprocessing": "^6.21.5",
     "react": "17.0.2",
+    "simplex-noise": "^2.4.0",
     "socket.io": "4.1.3",
     "styled-components": "5.3.0",
     "three": "^0.131.0",
